corrects layout bugs

--- a/src/styles/components/ChallengeBox.module.css
+++ b/src/styles/components/ChallengeBox.module.css
@@ -107,3 +107,9 @@
 .challengeActive footer button:hover {
     filter: brightness(0.9);
 }
+
+@media (prefers-color-scheme: dark) {
+    .challengeActive footer button {
+        color: white;
+    }
+}
